# broccolip

./: build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/amogusapp/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/example/testapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  amogusapp.cpp  camerax_api.cpp  connections_api.cpp
app/src/main/java/com/example/amogusapp/: CameraPreview.kt  CameraXScreen.kt  MainActivity.kt  MainScreen.kt  MainViewModel.kt  SendFilesScreen.kt  SplashScreen.kt
app/src/main/java/com/example/amogusapp/camerax/: CameraPreview.kt  CameraViewModel.kt  CameraXScreen.kt  PhotoBottomSheetContent.kt
app/src/main/java/com/example/amogusapp/realmdb/: BroccoDataBase.kt  Chat.kt  Prompts.kt  RealmViewModel.kt
app/src/main/java/com/example/amogusapp/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/example/testapp/: Application.kt  BiometricManager.kt  MainActivity.kt  SendFilesScreen.kt  SplashScreen.kt
app/src/main/java/com/example/testapp/camerax/: CameraModel.kt  CameraViewModel.kt  CameraXScreen.kt  PhotoBottomSheetContent.kt
app/src/main/java/com/example/testapp/filecnt/: FileModel.kt  FileView.kt  FileViewModel.kt
app/src/main/java/com/example/testapp/lalgebra/: Matrices.kt  MatrixModel.kt
app/src/main/java/com/example/testapp/room/: Chat.kt
app/src/main/java/com/example/testapp/ui/theme/: Color.kt  Theme.kt
app/src/main/res/drawable/: broccoli_stroke_rounded.xml  calculator_variant.xml  calculator_variant_outline.xml  code_array.xml  data_matrix_scan.xml  inverse.xml  matrix.xml  multiplication_box.xml  splash_background.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/test/java/com/example/amogusapp/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
